# vcpkg-media-registry

./: LICENSE.txt  README.md  pick_port.py
examples/archives/: libcexample-0.0.1.7z  libcppexample-0.0.1.7z  testexample-0.0.1.7z
examples/dists/: libcexample-0.0.1.7z  libcppexample-0.0.1.7z  testexample-0.0.1.7z
examples/libcexample/: CMakeLists.txt  libcexample-config.cmake.in
examples/libcexample/src/: version.h.in
examples/libcexample/src/headers/test/: test.h
examples/libcexample/src/sources/test/: test.c
examples/libcppexample/: CMakeLists.txt  libcppexample-config.cmake.in
examples/libcppexample/src/headers/test/: test.hpp
examples/libcppexample/src/sources/test/: test.cpp
examples/testexample/: CMakeLists.txt
examples/testexample/src/: config.h.cm  main.cpp  version.h.in
examples/testexample/src/sources/test/: test.cpp
examples/testregistry/: .gitignore  CMakeLists.txt  build.py  vcpkg-configuration.json  vcpkg.json
examples/testregistry/src/: version.h.in
examples/testregistry/src/headers/test/: test.hpp
ports/libcexample/: portfile.cmake  vcpkg.json
ports/libcppexample/: portfile.cmake  vcpkg.json
ports/libdvdread/: CMakeLists.txt
ports/testexample/: portfile.cmake  vcpkg.json
prebuilt/: version.txt
versions/: baseline.json
versions/c-/: cexample.json  cppexample.json
versions/l-/: libcexample.json  libcppexample.json  libdvdread.json
versions/t-/: testexample.json
